--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,9 +1,10 @@
+/*This CSS is defining the font for the body*/
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
-
+/* This CSS is making the background transparent as well as defining the border, size color and padding */
 textarea {
   background: transparent;
   border: none;
@@ -13,6 +14,7 @@ textarea {
   padding: 10px;
 }
 
+/* This is adding a pre-wrapped white spave to description, a rounded border to time-block, a border and color of white to row and hour */
 .description {
   white-space: pre-wrap;
 }
@@ -31,6 +33,7 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
+/* The below 3 classes are adding the colour styling for the past, present and future classes allowing JS to apply this styling when called.*/
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -45,6 +48,8 @@ textarea {
   background-color: #77dd77;
   color: white;
 }
+
+/* This is the styling being applied to the save button */
 
 .saveBtn {
   border-left: 1px solid black;
